--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h1 id="myId"></h1>
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos fugit, pariatur veniam, possimus totam temporibus aliquid architecto quidem illo repudiandae magni id quae dolore omnis iure corporis? Saepe, quaerat libero!</p>
+    <label id="counterLabel">0</label> <br> <br>
+
+    <button id="increase">increase</button>
+    <button id="reset">reset</button>
+    <button id="decrease">decrease</button>
 
     <script src="index.js"></script>
 </body>
