--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button id="increase">increase</button>
     <button id="reset">reset</button>
     <button id="decrease">decrease</button>
-
+   <p id="fun"></p>
     <script src="index.js"></script>
 </body>
 </html>
